# rambot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
plugin-commons/: Cargo.toml
plugin-commons/src/: audio.rs  file.rs  io.rs  lib.rs  metadata.rs
plugin-filters/: Cargo.toml
plugin-filters/src/: config.rs  echo.rs  kernel.rs  lib.rs  util.rs
plugin-flac/: Cargo.toml
plugin-flac/src/: lib.rs  main.rs
plugin-folder-list/: Cargo.toml
plugin-folder-list/src/: lib.rs
plugin-json-list/: Cargo.toml
plugin-json-list/src/: lib.rs
plugin-loop/: Cargo.toml
plugin-loop/src/: lib.rs
plugin-mp3/: Cargo.toml
plugin-mp3/src/: lib.rs  main.rs
plugin-mp4/: Cargo.toml
plugin-mp4/src/: lib.rs
plugin-ogg/: Cargo.toml
plugin-ogg/src/: lib.rs  main.rs
plugin-shuffle/: Cargo.toml
plugin-shuffle/src/: lib.rs
plugin-volume/: Cargo.toml
plugin-volume/src/: lib.rs
plugin-wave/: Cargo.toml
plugin-wave/src/: lib.rs  main.rs
rambot/: Cargo.toml
rambot-api/: Cargo.toml
rambot-api/src/: audio.rs  communication.rs  documentation.rs  lib.rs  plugin.rs  resolver.rs  time.rs  util.rs
rambot-api/src/api/: internal.rs  mod.rs
rambot-api/src/audio/: convert.rs  mod.rs
rambot-proc-macro/: Cargo.toml
rambot-proc-macro/src/: lib.rs
rambot-test-util/: Cargo.toml
rambot-test-util/src/: lib.rs
rambot/src/: audio.rs  command_data.rs  commands.rs  config.rs  drivers.rs  effect.rs  event.rs  key_value.rs  logging.rs  main.rs  plugin.rs  state.rs
rambot/src/command/: adapter.rs  effect.rs  layer.rs  mod.rs
rambot/src/command/board/: button.rs  mod.rs
rambot/src/plugin/: load.rs  mod.rs  source.rs
src/: main.rs
