[workspace]

members = [
    "plugin-commons",
    "plugin-filters",
    "plugin-flac",
    "plugin-folder-list",
    "plugin-json-list",
    "plugin-loop",
    "plugin-mp3",
    "plugin-ogg",
    "plugin-shuffle",
    "plugin-volume",
    "plugin-wave",
    "rambot",
    "rambot-api",
    "rambot-proc-macro"
]

[profile.release]

lto = true
opt-level = 3
panic = 'abort'
strip = true
