[package]
name = "plugin-commons"
version = "0.1.0"
authors = ["florian1345 <florian1345@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rambot-api = { path = "../rambot-api" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
