[package]
name = "plugin-commons"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rambot-api = { path = "../rambot-api" }
ureq = "2.5"
url = "2.2"

[dev-dependencies]
rambot-test-util = { path = "../rambot-test-util", features = [ "testing" ] }
