[package]
name = "plugin-filters"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rambot-api = { path = "../rambot-api" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
