[package]
name = "plugin-json-list"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin-commons = { path = "../plugin-commons" }
rambot-api = { path = "../rambot-api" }
serde_json = "1.0"
