[package]
name = "plugin-mp3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimp3 = "0.5"
plugin-commons = { path = "../plugin-commons" }
rambot-api = { path = "../rambot-api" }
