[package]
name = "plugin-mp3"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id3 = "1.3"
minimp3 = "0.5"
plugin-commons = { path = "../plugin-commons" }
rambot-api = { path = "../rambot-api" }
