[package]
name = "plugin-mp4"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin-commons = { path = "../plugin-commons" }
rambot-api = { path = "../rambot-api" }

[dependencies.symphonia]
version = "0.5"
default-features = false
features = [ "isomp4", "aac", "alac", "flac", "mp3", "vorbis" ]
