[package]
name = "plugin-ogg"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lewton = "0.10"
plugin-commons = { path = "../plugin-commons" }
rambot-api = { path = "../rambot-api" }
