[package]
name = "rambot-test-util"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rambot-api = { path = "../rambot-api", optional = true  }
rand = { version = "0.8", optional = true, features = [ "small_rng" ]  }
rand_distr = { version = "0.4", optional = true }

[features]
testing = [ "dep:rambot-api", "dep:rand", "dep:rand_distr" ]
