[package]
name = "rambot"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
libloading = "0.7"
log = "0.4"
rambot-api = { path = "../rambot-api" }
rambot-proc-macro = { path = "../rambot-proc-macro" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serenity = "0.10"
simplelog = "0.12"
songbird = "0.2"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
vmcircbuffer = "0.0.9"

[features]
bench = []
