[package]
name = "rambot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
libloading = "0.8"
log = "0.4"
poise = "0.6"
rambot-api = { path = "../rambot-api" }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serenity = "0.12"
simplelog = "0.12"
songbird = "0.4"
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
vmcircbuffer = "0.0.10"

[dependencies.symphonia]
version = "0.5"
features = ["pcm"]

[dev-dependencies]
rambot-test-util = { path = "../rambot-test-util", features = [ "testing" ] }

[features]
bench = []
